JDK9: Migrerer til bruk av factory-metoder og autoboxing av primitiver [SKIF-756]
* Dette fikset kompileringsfeil der linting er slått på (erfart dette på testkode).
* Fjernet convenience kostruktører for Id-klasser i testprosjekt til fordel for explisitt autoboxing av longs.