@@ -8,6 +8,7 @@ import org.testng.annotations.Test;
 
 import java.util.Set;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNotNull;
 
@@ -30,15 +31,13 @@ public class SkifTestMappingW2DTest {
     public void testMapInteger() {
         Integer source = 5;
         Integer target = map.w2d(source);
-        assertNotNull(target);
-        assertEquals(target, new Integer(5));
+        assertThat(target).isEqualTo(Integer.valueOf(5));
     }
 
     public void testMapInt() {
         int source = 5;
         int target = map.w2d(source);
-        assertNotNull(target);
-        assertEquals(target, 5);
+        assertThat(target).isEqualTo(5);
     }
 
     public void testMapA() {
